--- a/themes/jazz/css/style.css
+++ b/themes/jazz/css/style.css
@@ -962,6 +962,22 @@ body.arlo {
     font-size: 1.4em;
 }
 
+.arlo#arlo .arlo-popup-modal .modal-header {
+    padding-bottom: 0px;
+}
+
+.arlo#arlo .arlo-popup-modal .modal-header h5 {
+    margin: 0px;
+}
+
+.arlo#arlo .arlo-popup-modal .modal-body {
+    padding-top: 0px;
+}
+
+.arlo .arlo-popup-modal .modal-header .close {
+    display: none;
+}
+
 .arlo .arlo_session {
     margin-top: .5em;
     padding-bottom: .5em;
